class HomeStrings {
  final String helloText = 'Olá';
  final String listUpdated = 'Lista de desejos atualizada';

  final String myWishlist = 'Minha WishList';
  final String search = 'Buscar';

  final String emptyTitle = 'Nada salvo';
  final String emptyDescription = 'Ainda não tem nada na sua wishlist.';

  final String details = 'Detalhes';

  final String starShipDataModel = 'Modelo';
  final String starShipDataSize = 'Tamanho';
  final String starShipDataValue = 'Valor';
  final String starShipDataClass = 'Classe';
  final String starShipDataPassengers = 'Capacidade de passageiros';
  final String starShipDataCapacity = 'Capacidade de carga';
  final String starShipDataMaxSpeed = 'Velocidade máxima';

  final String addToWishlist = 'Adicionar a lista de desejos';
  final String removeFromWishlist = 'Remover da lista de desejos';
}
